--- a/src/App.css
+++ b/src/App.css
@@ -133,20 +133,16 @@ a:hover {
 }
   
 .map-responsive {
-  position: relative;
-  padding-bottom: 56.25%; /* 16:9 */
-  height: 0;
-  overflow: hidden;
   width: 100%;
+  height: 300px;
+  overflow: hidden;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .map-responsive iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   border: 0;
 }
+
