--- a/src/App.css
+++ b/src/App.css
@@ -216,8 +216,13 @@ a:hover {
   height: 100%;
 }
 
-.sobre-texto p, 
-.sobre-texto h2 {
+.sobre-texto p {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 19px;
+}
+
+.sobre-texto h2{
+  font-size: 30px;
   font-family: 'Times New Roman', Times, serif;
 }
 
